# stocks-monitor-system

./: .envrc  .gitignore  alembic.ini  database.py  main.py  models.py  pyproject.toml  pytest.ini  test.db
db/migrations/: env.py
db/migrations/versions/: 28ac9c23c96e_add_exchange_to_stocks.py  367b5eef4670_change_default_price_value.py  531fbb87bef6_.py  875c0e3bb546_create_user_table.py
docs/: domain.md
src/: database.py  main.py  models.py  settings.py
src/api/: auth.py  stocks.py
src/core/: auth.py
src/models/: __init__.py  stock.py  user.py
src/models/mixins/: __init__.py  json_serializer.py
src/schemas/: auth.py  stock.py  user.py
src/tests/: conftest.py
src/tests/api/auth/: test_auth_api.py
src/tests/api/stocks/: test_stocks_api.py
src/tests/api/users/: test_users_api.py
src/tests/factories/: stock_factory.py  user_factory.py
src/tests/fixtures/: database.py  stocks.py  users.py
src/tests/models/stocks/: test_stock_model.py
src/tests/reports/: config.py
src/tests/utils/: model_asserts.py
