[tool.poetry]
name = "stocks-monitor-system"
version = "0.1.0"
description = ""
authors = ["Nazarov Roman <nazarovbusiness@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14.0"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
