[tool.poetry]
name = "stocks-monitor-system"
version = "0.1.0"
description = ""
authors = ["Nazarov Roman <nazarovbusiness@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14.0"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
sqlalchemy = "^2.0.47"
psycopg2-binary = "^2.9.11"
pydantic-settings = "^2.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
